--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -32,9 +32,10 @@ theme = theme_minimal()
 
 ## Get data
 
-```{r}
+```{r echo=T}
 url = "https://co.vid19.sg/cases/search"
 df = get_data(url)
+print(df)
 
 if(dim(df)==0) {
   df = clean_data(df)
