--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -37,7 +37,7 @@ url = "https://co.vid19.sg/cases/search"
 df = try({get_data(url)})
 print(df)
 print(df[[1]])
-print(grep(df[[1]], "error"))
+print(grepl("error", df[[1]]))
 
 # if(class(df)=="try-error") {
 #   df = clean_data(df)
