--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -35,15 +35,11 @@ theme = theme_minimal()
 ```{r echo=T}
 url = "https://co.vid19.sg/cases/search"
 df = try({get_data(url)})
-print(df)
-print(df[[1]])
-print(grepl("error", df[[1]]))
-
-# if(class(df)=="try-error") {
-#   df = clean_data(df)
-# } else {
-#   df = get_alternative_data()
-# }  
+if(grepl("error", df[[1]])) {
+  df = clean_data(df)
+} else {
+  df = get_alternative_data()
+}  
 ```
 
 Data is obtained from `r url`. 
