--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -260,9 +260,8 @@ ggplot(df, aes(x=days.to.recover.symptomatic)) +
 ### Deaths
 
 ```{r}
-columns = c("case", "age", "gender", "patient.nationality", "confirmed.at.date", "infection.source")
-# columns = ifelse("deceased.at.date" %in% names(df), c(columns, "deceased.at.date"), columns)
-deceased = df[df$status == "Deceased", columns]
+deceased = df[df$status == "Deceased", c("case", "age", "gender", "patient.nationality",
+                                         "confirmed.at.date", "infection.source")]
 knitr::kable(deceased, "markdown")
 ```
 
