--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -139,7 +139,7 @@ This records the key measures the Singapore government has taken.
 
 Source: https://www.moh.gov.sg/news-highlights/
 
-```{r fig.height=6, fig.width=7}
+```{r fig.height=6, fig.width=9}
 data_1st_wave = data.table(df[df$confirmed.at.date < date_second_wave & df$infection.source == "imported case",])
 data_1st_wave = data_1st_wave[, list(N=length(case)), by="country.of.origin"]
 
@@ -159,7 +159,11 @@ grid.arrange(
 )
 ```
 
-#### Cases through time
+```{r}
+# SIR 
+```
+
+#### Hospital load
 
 ```{r} 
 max_load = 9*1200*0.15 # hospital capacity
@@ -203,14 +207,14 @@ renderPlot({
   ggplot(data=df_cases_day, aes(x=day, y=hospital_load)) +
     geom_bar(stat="identity", fill="steelblue") + 
     geom_vline(xintercept=date_no_hosp, size=2, col="red") +
-    xlab("") + ylab("Number of hospitalised persons\n") + 
+    xlab("") + ylab("Number of (estimated) hospitalised persons\n") + 
     scale_x_date(date_breaks = "weeks" , date_labels = "%Y EW %U") +
     theme
 })
 ```
 
-
 There are 9 public acute hospitals in Singapore, with an average capacity of 1,200 beds. They are currently operating at approximately [75% load](https://www.moh.gov.sg/resources-statistics/healthcare-institution-statistics/beds-occupancy-rate-(bor)). We assume that hospitals can operate at a 90% bed load, to ensure that hospitals are not overtaxed and there is sufficient isolation between covid patients (more than usual required). Then there would be `r max_load` beds available. 
+
 
 ```{r}
 renderPlot({
@@ -265,7 +269,7 @@ deceased = df[df$status == "Deceased", c("case", "age", "gender", "patient.natio
 knitr::kable(deceased, "markdown")
 ```
 
-Number of deceased: `r dim(deceased)[1]`.
+Number of deceased: `r dim(deceased)[1]`
 
 ### Risk factors
 
