--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -42,8 +42,15 @@ if(!grepl("error", df[[1]])) {
 }  
 ```
 
-Data is obtained from `r url`. 
+Data is obtained from `r url`. The data differs slightly from the MOH's press releases annex:
 
+1. Does not have hospital information
+2. Does not have case local linked/unlinked
+3. Does not have cluster information or links (for non-cluster cases). Both are considered "local linked".
+4. Only one imported country, when there could be a list.
+5. Does not have "long-term pass" information, due to data cleaning issues prior to 1 Apr 2020. 
+6. Citizen and PR are same, i.e. "citizen".
+7. Local linked cases may also be imported or have a travel history. But the former takes precedence. (e.g. case 973 linked to Lee Ah Mooi Home).
 
 ```{r echo=TRUE}
 str(df)
