[EJYS] Add cluster info

--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -288,6 +288,7 @@ ggplot(df, aes(x=days.to.recover.symptomatic)) +
 ### Deaths
 
 ```{r}
+# TODO: deceased at date
 deceased = df[df$status == "Deceased", c("case", "age", "gender", "patient.nationality",
                                          "confirmed.at.date", "infection.source")]
 knitr::kable(deceased, "markdown")
