[EJYS] Add sources of info

--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -185,7 +185,7 @@ These are the critical condition (ICU), cases in hospital, cases well but still 
 
 - 2020-04-02: 23, 464, 315
 
-Note: Data was only captured from 2 Apr 2020 onwards.
+Note: Data was only captured from 2 Apr 2020 onwards, refer to "sources.txt" for links.
 
 #### Cluster characteristics
 
